--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,10 @@
 
 .MainContent {
   margin-top: var(--header-height); /* Adjust for the TopNavBar height */
-  padding: 2rem; /* Optional: Add padding for better spacing */
+  padding-top: 5vh;
   text-align: center;
+  min-height: 80vh;
+
 }
 
 
