--- a/src/pages/TemplateSelection.css
+++ b/src/pages/TemplateSelection.css
@@ -1,14 +1,14 @@
 /* Fullscreen Container */
 .template-selection-container {
   width: 100vw;
-  height: 100vh;
   background: white;
   color: black;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  position: relative;
+  position: absolute;
+  left: 0;
   padding: 20px;
   box-sizing: border-box;
 }
